Fix for admin screen: latest MochaUI will remove the scrollbar, so you cannot reach most of the pages in the dyn_list. This fix alters the admin.php HTML and CSS to ensure the vertical scrollbar shows up and renders correctly while the MochaUI dockbar is shown (fixed or autohidden).

--- a/admin/img/styles/layout.css
+++ b/admin/img/styles/layout.css
@@ -328,3 +328,11 @@ div.module
 {
 	margin-top: 20px;
 }
+
+/*
+Make sure the admin content has a scrollbar when needed. Override body+html:overflow=hidden CSS setup in Mocha: we want our Y-scrollbar!
+*/
+#pageWrapper
+{
+	overflow: auto;
+}
